--- a/test1/style.css
+++ b/test1/style.css
@@ -110,3 +110,213 @@ margin-right: 20px;
 margin-top: 100px;
 margin-bottom: 200px;
 }
+
+
+
+
+
+/* 88888888 */
+
+
+
+
+
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+#about_section, #portfolio_section, #team_section, #services_section, #contactus_section {
+    font-family: 'Open Sans', sans-serif;
+    color: #2E3D49;
+    position: relative;
+}
+.diffSection {
+    width: 100%;
+    /*position: relative;*/
+    justify-content: center;
+    align-items: center;
+}
+.diffSection .content {
+    margin: 10px;
+    text-align: center;
+    padding: 10px 100px;
+    font-size: 1.1em;
+}
+
+
+html {
+  scroll-behavior: smooth;
+}
+body {
+  background: #fff;
+  font-family: "Open Sans", sans-serif;
+}
+
+header {
+  height: 90vh;
+}
+.black {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+}nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 10px 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+  .menu {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+  }
+  nav ul {
+    display: flex;
+    list-style: none;
+  }
+  nav ul li {
+    margin: 0 10px;
+  }
+  nav ul li a:hover,
+  nav ul .active {
+    color: #fff;
+    background: #df2771;
+    border-radius: 5px;
+  }
+
+.srch {
+  padding: 2px 10px;
+  display: flex;
+
+  justify-content: center;
+
+  border: 1px solid;
+  border-radius: 20px;
+}
+.srch img {
+  width: 25px;
+  cursor: pointer;
+}
+.srch .search {
+  outline: none;
+  border: none;
+  background: transparent;
+}
+
+.get-started {
+  margin-left: 50px;
+  padding: 5px 20px;
+  border: 2px solid #df2771;
+  border-radius: 20px;
+  text-decoration: none;
+
+  transition: 0.5s;
+  background-color: #df2771;
+  color: #fff;
+}
+.get-started:hover {
+  color: #2e2e2e;
+  background: #fff;
+}
+.logo img {
+  width: 210px;
+  cursor: pointer;
+  transition: all 1s;
+}
+
+a,
+button {
+  float: left;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  color: #2e3d49;
+  display: block;
+  text-decoration: none;
+  text-align: center;
+}
+
+
+
+
+/*footer*/
+footer {
+  color: #e5e8ef;
+  background: #000d;
+  padding: 10px 0;
+}
+footer .footer-container {
+  max-width: 1300px;
+  margin: auto;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap-reverse;
+}
+footer .social-media img {
+  width: 18px;
+}
+footer .logo {
+  width: 200px;
+  color: #fff;
+}
+footer .social-media a {
+  margin-right: 10px;
+  font-size: 22px;
+  text-decoration: none;
+}
+footer .right-col h1 {
+  font-size: 26px;
+}
+footer .border {
+  width: 100px;
+  height: 4px;
+  background: linear-gradient(to right, #fa4b37, #df2771);
+  margin: 2px;
+}
+footer .newsletter-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+footer input::placeholder {
+  color: white !important;
+}
+footer .txtb {
+  flex: 1;
+  padding: 18px 40px;
+  font-size: 16px;
+  background: #343a40;
+  border: none;
+  font-weight: 700;
+  outline: none;
+  border-radius: 5px;
+  min-width: 260px;
+  margin-top: 20px;
+  color: white;
+}
+footer .btn {
+  margin-top: 20px;
+  padding: 18px 40px;
+  font-size: 16px;
+  color: #f1f1f1;
+  background: linear-gradient(to right, #fa4b37, #df2771);
+  border: none;
+  font-weight: 700;
+  outline: none;
+  border-radius: 5px;
+  margin-left: 20px;
+  cursor: pointer;
+  transition: opacity 0.3s linear;
+}
+footer .btn:hover {
+  opacity: 0.7;
+}
